@@ -8,7 +8,7 @@ to you under the Apache License, Version 2.0 (the
 "License"); you may not use this file except in compliance
 with the License.  You may obtain a copy of the License at
 
-   http://www.apache.org/licenses/LICENSE-2.0
+  http://www.apache.org/licenses/LICENSE-2.0
 
 Unless required by applicable law or agreed to in writing,
 software distributed under the License is distributed on an
@@ -16,6 +16,7 @@ software distributed under the License is distributed on an
 KIND, either express or implied.  See the License for the
 specific language governing permissions and limitations
 under the License.
+
 -->
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -194,7 +195,16 @@ under the License.
             <groupId>org.apache.cocoon.sax</groupId>
             <artifactId>cocoon-sax</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.cocoon.optional</groupId>
+            <artifactId>cocoon-optional</artifactId>
+        </dependency>
+            
+        <dependency>    
+            <groupId>org.apache.xmlgraphics</groupId>
+            <artifactId>fop</artifactId>
+        </dependency>
+            
         <dependency>
             <groupId>org.apache.openjpa</groupId>
             <artifactId>openjpa-all</artifactId>
@@ -511,7 +521,7 @@ under the License.
                             <cargo.rmi.port>8805</cargo.rmi.port>
 
 <!--                            <cargo.jvmargs>-Xdebug -Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n</cargo.jvmargs>-->
-                            <cargo.jvmargs>-noverify ${javaagent} -Drebel.spring_plugin=false</cargo.jvmargs>
+                            <cargo.jvmargs>-noverify ${javaagent} -Drebel.spring_plugin=false -Xms512m -Xmx1024m -XX:PermSize=512m -XX:MaxPermSize=1024m</cargo.jvmargs>
                         </properties>
                         <configfiles>
                             <configfile>
